# Feathershot

./: .gitignore  CMakeLists.txt  README.md  cropper.css  cropper.html  cropper.js  editor.css  editor.html  editor.js  main.js  package-lock.json  package.json  preload.js  settings.css  settings.html  settings.js  update.html
.github/workflows/: build.yml  deploy-pages.yml  release.yml
resources/: resources.qrc
src/: main.cpp  preload.js
src/core/: core.cpp  core.h
src/pages/: cropper.html  editor.html  intro.html  settings-new-interface.html  settings.html  update.html
src/scripts/: cropper.js  editor.js  intro.js  settings-new-interface.js  settings.js
src/styles/: cropper.css  editor.css  intro.css  settings-new-interface.css  settings.css
src/ui/: cropperwindow.cpp  cropperwindow.h  editorwindow.cpp  editorwindow.h  introwindow.cpp  introwindow.h  settingswindow.cpp  settingswindow.h
website/: index.html  style.css
